| Summary: | ASTERISK-19538: Asterisk segfaults on sippeers realtime redundancy | ||
| Reporter: | Alex (alexat) | Labels: | |
| Date Opened: | 2012-03-15 00:46:23 | Date Closed: | 2015-05-17 15:35:17 |
| Priority: | Critical | Regression? | No |
| Status: | Closed/Complete | Components: | Addons/res_config_mysql |
| Versions: | 1.8.10.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | CentOS 5, CentOS 6 | Attachments: | ( 0) backtrace.txt |
| Description: | Easily reproducible segfault affecting all versions of the * 1.8 branch: 1. Create two MySQL servers server1 and server2 in res_mysql.conf 2. Apply redundancy in extconfig.conf as follows: sippeers => mysql,server,sip_peers,1 sippeers => mysql,server2,sip_peers,2 3. Start Asterisk. It won't start, and will segfault at start. Tested on different servers in different configurations. Segfault is constant, and depends only on redundancy configuration (leaving only one server helps). No backtrace is provided, if (really) needed, I can provide it, but the bug is easily reproducible. | ||
| Comments: | By: Matt Jordan (mjordan) 2012-03-15 08:29:39.003-0500 Please do attach a backtrace. What realtime driver are you using for the database connection? By: Alex (alexat) 2012-03-23 04:46:59.486-0500 I may be stupid, but how to generate an Asterisk backtrace? Do we need to build DEBUG version for it? It does not generate any by default. By: Matt Jordan (mjordan) 2012-03-23 10:49:07.732-0500 Instructions below: Thank you for your bug report. In order to move your issue forward, we require a backtrace[1] from the core file produced after the crash. Also, be sure you have DONT_OPTIMIZE enabled in menuselect within the Compiler Flags section, then: make install After enabling, reproduce the crash, and then execute the backtrace[1] instructions. When complete, attach that file to this issue report. [1] https://wiki.asterisk.org/wiki/display/AST/Getting+a+Backtrace By: Matt Jordan (mjordan) 2012-03-23 10:52:23.574-0500 Please also note that the res_config_mysql module is in extended support state, and as such development support for it comes from the Asterisk Open Source developer community. Response times may reflect that. https://wiki.asterisk.org/wiki/display/AST/Asterisk+Module+Support+States By: Alex (alexat) 2012-04-09 08:59:59.987-0500 Attaching generated backtrace. By: Matt Jordan (mjordan) 2012-04-24 14:49:07.290-0500 Please note that you have to use the "Send Back" button when you've provided feedback, otherwise issues can fall off the radar. By: Rusty Newton (rnewton) 2015-05-17 15:35:17.306-0500 A fix was merged. Auto-close missed this one.. closing out. | ||